--- a/Bourse/Views/BourseView/DetailsDTO.cshtml
+++ b/Bourse/Views/BourseView/DetailsDTO.cshtml
@@ -66,7 +66,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model.TrainingData.TakeLast(20).OrderByDescending(t=> t.Date)) // Prendre seulement les 20 premiers éléments
+            @foreach (var item in Model.TrainingData!.TakeLast(20).OrderByDescending(t=> t.Date)) // Prendre seulement les 20 premiers éléments
             {
                 <tr>
                     <td>
