--- a/Bourse/Views/BourseView/Forecasts.cshtml
+++ b/Bourse/Views/BourseView/Forecasts.cshtml
@@ -58,12 +58,13 @@
 
 @if (ViewData["TotalPages"] != null)
 {
-    var currentPage = (int)ViewData["CurrentPage"];
-    var totalPages = (int)ViewData["TotalPages"];
-    var pageSize = (int)ViewData["PageSize"];
-    string sortOrder = ViewData["CurrentSort"]?.ToString();
-    string filtre = ViewData["actifFiltre"]?.ToString();
-    string exchangeFiltre = ViewData["ExchangeFiltre"]?.ToString();
+    int currentPage = ViewData["CurrentPage"] as int? ?? 1;
+    int totalPages = ViewData["TotalPages"] as int? ?? 1;
+    int pageSize = ViewData["PageSize"] as int? ?? 50;
+
+    string sortOrder = ViewData["CurrentSort"]?.ToString() ?? "";
+    string filtre = ViewData["actifFiltre"]?.ToString() ?? "";
+    string exchangeFiltre = ViewData["ExchangeFiltre"]?.ToString() ?? "";
 
     <nav aria-label="Page navigation example">
         <ul class="pagination">
@@ -142,6 +143,9 @@
                 @Html.DisplayNameFor(model => model.Raccomandation)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Analysis)
+            </th>
+            <th>
                 RSI_14
             </th>
             <th>
@@ -209,15 +213,35 @@
                     @Html.DisplayFor(modelItem => item.Raccomandation)
                 </td>
                 <td>
-                    @(item.TrainingData.Count > 0
-                        ? item.TrainingData.LastOrDefault().RSI_14Display
+                    @if (item.Analysis != null && item.Analysis.Any())
+                    {
+                        <ul style="padding-left: 0; margin: 0;">
+                            @foreach (var entry in item.Analysis)
+                            {
+                                <li style="list-style: none; padding: 0; margin: 0;">
+                                    <span style="color:@GetRaccomandationColor(entry.Key); white-space: nowrap">
+                                        <strong>@entry.Key: @entry.Value</strong>
+                                    </span>
+                                </li>
+                            }
+                        </ul>
+                    }
+                    else
+                    {
+                        <span>N/A</span>
+                    }
+                </td>
+                <td>
+                    @(item.TrainingData?.LastOrDefault() is { } last
+                        ? last.RSI_14Display
                         : "0 %")
                 </td>
                 <td>
-                    @(item.TrainingData.Count > 0
-                        ? item.TrainingData.LastOrDefault().SMA_14Display
+                    @(item.TrainingData?.LastOrDefault() is { } last1
+                        ? last1.SMA_14Display
                         : "0")
                 </td>
+
                 <td>
                     @Html.DisplayFor(modelItem => item.DateUpdated)
                 </td>
@@ -246,7 +270,7 @@
     }
 
     .color-negative {
-        color: lightcoral;
+        color: firebrick;
         font-weight: bold;
     }
 
@@ -290,15 +314,15 @@
 }
 
 @functions {
-    public string GetRaccomandationColor(string raccomandation)
+    public string GetRaccomandationColor(string? raccomandation)
     {
         return raccomandation switch
         {
             "Strong Buy" => "green",
-            "Buy" => "lightgreen",
-            "Hold" => "lightblue",
+            "Buy" => "mediumseagreen",
+            "Hold" => "steelblue",
             "Sell" => "orange",
-            "Strong Sell" => "red",
+            "Strong Sell" => "firebrick",
             _ => "black" // Par défaut
         };
     }
